Added the put method to the yaml file and create de getalltodos file to get all todos.
